--- a/src/components/Modal/styles.module.css
+++ b/src/components/Modal/styles.module.css
@@ -1,14 +1,22 @@
 .root {
-    background-color: black;
-    position: absolute;
-    width: 100vw;
-    height: 100vh;
-    top: 0;
-    left: 0;
-    opacity: 0.2;
-    z-index: 1;
+	background-color: black;
+	position: absolute;
+	width: 100vw;
+	height: 100vh;
+	top: 0;
+	left: 0;
+	opacity: 0.2;
+	z-index: 1;
 }
 
 .interactive {
-    cursor: pointer;
+	cursor: pointer;
 }
+
+/* .modal {
+	background-color: white;
+	position: "absolute";
+	top: 0;
+	left: 0;
+	z-index: 2;
+} */
