--- a/src/components/Pages/FilmsPage/styles.module.css
+++ b/src/components/Pages/FilmsPage/styles.module.css
@@ -1,4 +1,36 @@
 .page {
 	padding: 20px 32px;
 	display: flex;
+	height: 100%;
+}
+
+.content {
+	display: flex;
+	flex-direction: column;
+	gap: 16px;
+	width: 80%;
+}
+
+.empty {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	height: 100%;
+}
+
+.title {
+	font-family: "Inter";
+	font-size: 16px;
+	font-weight: 500;
+	line-height: 20px;
+	text-align: center;
+}
+
+.subtitle {
+	font-family: "Inter";
+	font-size: 14px;
+	font-weight: 400;
+	line-height: 20px;
+	text-align: center;
 }
