--- a/src/components/Pages/FilmsPage/styles.module.css
+++ b/src/components/Pages/FilmsPage/styles.module.css
@@ -34,3 +34,11 @@
 	line-height: 20px;
 	text-align: center;
 }
+
+.spinner {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	height: calc(100vh - 120px);
+}
