--- a/src/components/FilmCard/styles.module.css
+++ b/src/components/FilmCard/styles.module.css
@@ -5,6 +5,10 @@
 	padding: 24px;
 }
 
+.card:hover {
+	cursor: pointer;
+}
+
 .image {
 	width: 100px;
 	height: 120px;
@@ -42,9 +46,20 @@
 .table {
 	margin-left: 24px;
 	border-collapse: collapse;
+	width: 80%;
 }
 
 .line {
 	height: 20px;
 	padding: 12px 0;
+}
+
+.rating {
+	width: 20%;
+	display: flex;
+	flex-direction: column;
+	margin-left: 5%;
+	width: fit-content;
+	align-items: center;
+	top: 0;
 }
