--- a/src/components/Pages/FilmPage/styles.module.css
+++ b/src/components/Pages/FilmPage/styles.module.css
@@ -1,13 +1,10 @@
-.image {
-	width: 400px;
-	height: 400px;
-	object-fit: cover;
+.page {
+	padding: 32px;
 }
 
-.text {
-	font-family: "Roboto";
-	font-size: 20px;
-	font-weight: 400;
-	line-height: 24px;
-	text-align: left;
+.actors {
+	display: flex;
+	flex-direction: row;
+	gap: 24px;
+	padding-top: 24px;
 }
