--- a/src/components/Button/styles.module.css
+++ b/src/components/Button/styles.module.css
@@ -1,9 +1,10 @@
 .btn {
-	width: 72px;
+	width: fit-content;
 	height: 40px;
 	border-radius: 8px;
-	padding: 8px, 16px, 8px, 16px;
+	padding: 8px 16px;
 	cursor: pointer;
+	font-size: 14px;
 }
 
 .transparent {
