--- a/src/components/FilmCard/styles.module.css
+++ b/src/components/FilmCard/styles.module.css
@@ -58,8 +58,13 @@
 	width: 20%;
 	display: flex;
 	flex-direction: column;
-	margin-left: 5%;
-	width: fit-content;
 	align-items: center;
 	top: 0;
+	margin-left: auto;
+	width: fit-content;
+}
+
+.info {
+	display: flex;
+	width: 80%;
 }
