--- a/src/components/Header/styles.module.css
+++ b/src/components/Header/styles.module.css
@@ -22,3 +22,17 @@
 	margin-left: auto;
 	width: fit-content;
 }
+
+.form {
+	display: flex;
+	flex-direction: column;
+	gap: 8px;
+	width: 100%;
+}
+
+.controls {
+	display: flex;
+	flex-direction: row;
+	gap: 8px;
+	margin-top: 12px;
+}
