--- a/src/components/Modal/styles.module.css
+++ b/src/components/Modal/styles.module.css
@@ -33,3 +33,15 @@
 	margin-left: auto;
 	color: #ababab;
 }
+
+.content {
+	display: flex;
+	flex-direction: column;
+	gap: 8px;
+}
+
+.wrapper {
+	display: flex;
+	flex-direction: column;
+	gap: 24px;
+}
