--- a/src/components/FilmCard/styles.module.css
+++ b/src/components/FilmCard/styles.module.css
@@ -1,70 +1,70 @@
 .card {
-	background-color: white;
-	display: flex;
-	border-radius: 8px;
-	padding: 24px;
+  background-color: white;
+  display: flex;
+  border-radius: 8px;
+  padding: 24px;
 }
 
 .card:hover {
-	cursor: pointer;
+  cursor: pointer;
 }
 
 .image {
-	width: 100px;
-	height: 120px;
-	border-radius: 8px;
-	object-fit: cover;
-	vertical-align: top;
+  width: 100px;
+  height: 120px;
+  border-radius: 8px;
+  object-fit: cover;
+  vertical-align: top;
 }
 
 .type {
-	font-family: "SF Pro Display";
-	color: #ababab;
-	font-size: 14px;
-	line-height: 20px;
-	font-weight: 400;
-	vertical-align: top;
-	padding: 6px 0;
+  font-family: 'SF Pro Display';
+  color: #ababab;
+  font-size: 14px;
+  line-height: 20px;
+  font-weight: 400;
+  vertical-align: top;
+  padding: 6px 0;
 }
 
 .text {
-	font-family: "SF Pro Display";
-	color: black;
-	font-size: 14px;
-	line-height: 20px;
-	font-weight: 400;
-	padding: 6px 0;
-	vertical-align: top;
+  font-family: 'SF Pro Display';
+  color: black;
+  font-size: 14px;
+  line-height: 20px;
+  font-weight: 400;
+  padding: 6px 0;
+  vertical-align: top;
 }
 
 .title {
-	width: 100%;
-	font-size: 20px;
-	font-weight: 600;
+  width: 100%;
+  font-size: 20px;
+  font-weight: 600;
 }
 
 .table {
-	margin-left: 24px;
-	border-collapse: collapse;
-	width: 80%;
+  margin-left: 24px;
+  border-collapse: collapse;
+  width: 80%;
 }
 
 .line {
-	height: 20px;
-	padding: 12px 0;
+  height: 20px;
+  padding: 12px 0;
 }
 
 .rating {
-	width: 20%;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	top: 0;
-	margin-left: auto;
-	width: fit-content;
+  width: 20%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  top: 0;
+  margin-left: auto;
+  width: fit-content;
 }
 
 .info {
-	display: flex;
-	width: 80%;
+  display: flex;
+  width: 80%;
 }
