--- a/src/components/FilterMenu/styles.module.css
+++ b/src/components/FilterMenu/styles.module.css
@@ -1,19 +1,19 @@
 .menu {
-	width: 20%;
-	height: 232px;
-	background-color: white;
-	border-radius: 8px;
-	padding: 24px;
-	margin-right: 24px;
-	display: flex;
-	flex-direction: column;
-	gap: 16px;
+  width: 20%;
+  height: 232px;
+  background-color: white;
+  border-radius: 8px;
+  padding: 24px;
+  margin-right: 24px;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
 }
 
 .title {
-	font-family: "Roboto";
-	font-size: 16px;
-	font-weight: 600;
-	line-height: 20px;
-	text-align: left;
+  font-family: 'Roboto';
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 20px;
+  text-align: left;
 }
