--- a/src/components/Header/styles.module.css
+++ b/src/components/Header/styles.module.css
@@ -1,33 +1,33 @@
 .header {
-	width: 100%;
-	height: 88px;
-	background-color: #333333;
-	padding: 24px 32px;
-	display: inline-flex;
-	justify-content: space-between;
-	position: sticky;
-	top: 0;
+  width: 100%;
+  height: 88px;
+  background-color: #333333;
+  padding: 24px 32px;
+  display: inline-flex;
+  justify-content: space-between;
+  position: sticky;
+  top: 0;
 }
 
 .title {
-	font-size: 32px;
-	line-height: 37.5px;
-	font-weight: 700;
-	font-family: "Roboto";
-	color: white;
-	flex-grow: 1;
+  font-size: 32px;
+  line-height: 37.5px;
+  font-weight: 700;
+  font-family: 'Roboto';
+  color: white;
+  flex-grow: 1;
 }
 
 .right {
-	display: flex;
-	margin-left: auto;
-	width: fit-content;
-	gap: 16px;
+  display: flex;
+  margin-left: auto;
+  width: fit-content;
+  gap: 16px;
 }
 
 .profile {
-	height: 40px;
-	background-color: white;
-	border-radius: 32px;
-	padding: 8px;
+  height: 40px;
+  background-color: white;
+  border-radius: 32px;
+  padding: 8px;
 }
