--- a/src/components/Modal/styles.module.css
+++ b/src/components/Modal/styles.module.css
@@ -1,47 +1,47 @@
 .root {
-	background-color: black;
-	position: absolute;
-	width: 100vw;
-	height: 100vw;
-	top: 0;
-	left: 0;
-	opacity: 0.2;
-	z-index: 1;
+  background-color: black;
+  position: absolute;
+  width: 100vw;
+  height: 100vw;
+  top: 0;
+  left: 0;
+  opacity: 0.2;
+  z-index: 1;
 }
 
 .interactive {
-	cursor: pointer;
+  cursor: pointer;
 }
 
 .top {
-	display: inline-flex;
-	justify-content: space-between;
+  display: inline-flex;
+  justify-content: space-between;
 }
 
 .title {
-	font-family: "Roboto";
-	font-size: 20px;
-	font-weight: 600;
-	line-height: 20px;
-	text-align: left;
-	flex-grow: 1;
+  font-family: 'Roboto';
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 20px;
+  text-align: left;
+  flex-grow: 1;
 }
 
 .closeBtn {
-	width: 20px;
-	cursor: pointer;
-	margin-left: auto;
-	color: #ababab;
+  width: 20px;
+  cursor: pointer;
+  margin-left: auto;
+  color: #ababab;
 }
 
 .content {
-	display: flex;
-	flex-direction: column;
-	gap: 8px;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
 }
 
 .wrapper {
-	display: flex;
-	flex-direction: column;
-	gap: 24px;
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
 }
