--- a/src/components/Rating/styles.module.css
+++ b/src/components/Rating/styles.module.css
@@ -1,31 +1,31 @@
 .rating {
-	display: flex;
-	flex-direction: row;
-	gap: 8px;
+  display: flex;
+  flex-direction: row;
+  gap: 8px;
 }
 
 .star {
-	cursor: pointer;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	gap: 8px;
-	font-family: "SF Pro Display";
-	font-size: 14px;
-	font-weight: 400;
-	line-height: 20px;
-	text-align: left;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  font-family: 'SF Pro Display';
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 20px;
+  text-align: left;
 }
 
-input[type="radio"] {
-	display: none;
+input[type='radio'] {
+  display: none;
 }
 
 .login {
-	font-size: 12px;
-	display: flex;
-	flex-direction: column;
-	gap: 12px;
-	align-items: end;
+  font-size: 12px;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  align-items: end;
 }
