--- a/src/components/Select/styles.module.css
+++ b/src/components/Select/styles.module.css
@@ -1,28 +1,28 @@
 .select {
-	border-radius: 8px;
-	padding: 10px 16px;
-	width: 100%;
+  border-radius: 8px;
+  padding: 10px 16px;
+  width: 100%;
 }
 
 .select:focus {
-	border: 1px solid #ff5500;
+  border: 1px solid #ff5500;
 }
 
 .select-selected:after {
-	position: absolute;
-	content: "";
-	top: 14px;
-	right: 10px;
-	width: 0;
-	height: 0;
-	border: 6px solid transparent;
-	border-color: #fff transparent transparent transparent;
+  position: absolute;
+  content: '';
+  top: 14px;
+  right: 10px;
+  width: 0;
+  height: 0;
+  border: 6px solid transparent;
+  border-color: #fff transparent transparent transparent;
 }
 
 .option {
-	background-color: white;
+  background-color: white;
 }
 
 .option:hover {
-	background-color: #fafafa;
+  background-color: #fafafa;
 }
