--- a/src/components/Modal/styles.module.css
+++ b/src/components/Modal/styles.module.css
@@ -29,6 +29,10 @@
 
 .closeBtn {
   width: 20px;
+  height: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   cursor: pointer;
   margin-left: auto;
   color: #ababab;
