--- a/src/components/Pages/FilmPage/styles.module.css
+++ b/src/components/Pages/FilmPage/styles.module.css
@@ -8,3 +8,18 @@
   gap: 24px;
   padding-top: 24px;
 }
+
+.actorBlock {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.title {
+  font-family: 'Roboto';
+  font-size: 24px;
+  font-weight: 600;
+  line-height: 32px;
+  text-align: left;
+  margin-top: 24px;
+}
