--- a/src/pages/FilmPage/styles.module.css
+++ b/src/pages/FilmPage/styles.module.css
@@ -23,3 +23,11 @@
   text-align: left;
   margin-top: 24px;
 }
+
+.spinner {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: calc(100vh - 120px);
+}
